Added sql driver/source parsing from config file and update README

--- a/test/configs/test_parse.conf
+++ b/test/configs/test_parse.conf
@@ -60,4 +60,9 @@ streaming: {
       fds_limit: 8
       parallel_recovery: 9
   }
+
+  sql: {
+    driver: "mysql"
+    source: "ivan:pwd@/nss_db"
+  }
 }
